Fix menu icon displaying on smaller screens

--- a/website/src/css/custom.scss
+++ b/website/src/css/custom.scss
@@ -174,3 +174,15 @@
   display: flex;
   width: 100%;
 }
+
+.navbar__toggle {
+  color: #d1d5db;
+}
+
+.navbar-sidebar__item .menu__link {
+  color: #d1d5db;
+}
+
+.navbar-sidebar__back {
+  color: #d1d5db;
+}
